[package]
name = "bhd-decrypter"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
rayon = "1.10"
malachite = "0.8.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "decrypt_bench"
harness = false

[lib]
name = "bhd_decrypter"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "decrypter"
path = "src/main.rs"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
panic = "abort"
strip = true

[profile.bench]
codegen-units = 1
debug = true
lto = true
opt-level = 3
strip = true
